fix alignemnt bug for grid

--- a/style.css
+++ b/style.css
@@ -147,6 +147,7 @@ h1 {
 .grid-item{
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .result-card {
